--- a/site/style.css
+++ b/site/style.css
@@ -1,8 +1,9 @@
 body .menu{
 text-align:center;
 font-family: 'Harabara', 'MS Gothic';
-background: #ffffff;
 }
 body .menu a{
 text-decoration: none;
+background: #ffffff;
+color: #000000;
 }
