--- a/site/style.css
+++ b/site/style.css
@@ -4,6 +4,6 @@ font-family: 'Harabara', 'MS Gothic';
 }
 body .menu a{
 text-decoration: none;
-background: #ffffff;
-color: #000000;
+background: #000000;
+color: #ffffff;
 }
