--- a/site/style.css
+++ b/site/style.css
@@ -1,7 +1,8 @@
+
 body .menu{
 text-align:center;
 background: #000000;
-font-family: 'Harabara', 'MS Gothic';
+font-family: 'Harabara Mais Demo', 'MS Gothic';
 }
 
 body .menu #or{
