--- a/borne/style.css
+++ b/borne/style.css
@@ -4,3 +4,6 @@ font-size: 7.5rem;
 font-family: 'orkney regular';
 }
 
+body{
+background: url('https://images6.alphacoders.com/795/thumb-1920-795969.png');
+}
