--- a/borne/style.css
+++ b/borne/style.css
@@ -5,6 +5,5 @@ font-family: 'orkney regular';
 }
 
 body{
-background: url('https://images6.alphacoders.com/795/thumb-1920-795969.png') height: 3508px, width: 
-2480px;
+background-color: #cc0000;
 }
