--- a/site/style.css
+++ b/site/style.css
@@ -1,25 +1,214 @@
-
-body .menu{
-text-align:center;
-background: #000000;
-font-family: 'Harabara Mais Demo', 'MS Gothic';
+/*header*/
+.menu{
+    width: 100%;
+    height :66px;
+    line-height: 66px;
+    background-color: black;
 }
 
-body .menu #or{
-color: #BF911D;
+.m-left{
+    float: left;
 }
 
-body .menu a{
-text-decoration: none;
-background: #000000;
-color: #ffffff;
-font-size: 5rem;
-line-width: 2;
+.logo{
+    margin: 0;
+    padding:0;
+    color:white;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 50px;
+    font-family: metria;
+    
 }
 
-body .menu a:hover{
-color: #B22222;
+.m-right{
+    float: right;
+    font-family: 'Harabara Mais Demo', 'MS Gothic';
+    font-size : 15px;
 }
-body{
-background-color: #161616;
+
+.m-link{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    padding : 0; margin :0 10px;
+    transition: all 0.3s ease-in-out;
+    border-bottom: 2px solid transparent;
 }
+
+.m-link:hover{
+    border-bottom: 2px solid gold;
+    padding-bottom: 3px;
+    color : gold;
+    font-size : 20px;
+}
+
+.m-link i{
+    margin-right:5px;
+}
+
+
+
+
+
+
+
+
+/*Grande Image sur le menu d'accueil*/
+
+body,html,header,h1{
+    margin:0px;
+    padding:0px;
+}
+
+.wrapper{
+    margin:0px;
+    padding:0px;
+    width: 100%;
+    height: 100%;
+    background: url(cinema.jpg)no-repeat;
+    background-size:cover;
+    color:white;  
+}
+
+header,body,html{
+    width: 100%;
+    height: 100%;
+}
+
+
+header{
+    background: url(images/cinema.jpg)no-repeat;
+    background-size:cover;
+    color:white;    
+}
+
+.wrapper{
+    display:table;
+    width: 100%;
+    height: 100%;
+}
+
+
+.content{
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    text-shadow:1px 1px 10px black;
+}
+
+.subtitle{
+    font-size:23px;
+}
+
+main{
+    max-width: 650px;
+    margin:80px auto;
+}
+
+
+
+
+
+
+
+/*Diapo*/
+/* gestion des dimensions et débordement du conteneur */
+#slideshow .container {
+	position:relative;
+	width: 640px;
+	height: 310px;
+	overflow: hidden;
+}
+	
+/* on prévoit un petit espace gris pour la timeline */
+#slideshow .container:after {
+	position:absolute;
+	bottom: 0; left:0;
+	content: " ";
+	width: 100%;
+	height: 1px;
+	background: #999;
+}
+/* 
+   le conteneur des slides
+   en largeur il fait 100% x le nombre de slides
+*/
+#slideshow .slider {
+	position: absolute;
+	left:0; top:0;
+	width: 400%;
+	height: 310px;
+}
+
+/* annulation des marges sur figure */
+#slideshow figure {
+	position:relative;
+	display:inline-block;
+	padding:0; margin:0;
+}
+
+/* petit effet de vignette sur les images */
+#slideshow figure:after {
+	position: absolute;
+	display:block;
+	content: " ";
+	top:0; left:0;
+	width: 100%; height: 100%;
+	box-shadow: 0 0 65px rgba(0,0,0, 0.5) inset;   
+}
+
+
+/* styles de nos légendes */
+#slideshow figcaption {
+	position:absolute;
+	left:0; right:0; bottom: 5px;
+	padding: 20px;
+	margin:0;
+	border-top: 1px solid rgb(225,225,225);
+	text-align:center;
+	letter-spacing: 0.05em;
+	word-spacing: 0.05em;
+	font-family: Georgia, Times, serif;
+	background: #fff;
+	background: rgba(255,255,255,0.7);
+	color: #555;
+	text-shadow: -1px -1px 0 rgba(255,255,255,0.3);
+}
+
+
+/* fonction d'animation*/
+@keyframes slider {
+	0%, 20%, 100%	{ left: 0 }
+	25%, 45%		{ left: -100% }
+	50%, 70%		{ left: -200% }
+	75%, 95%		{ left: -300% }
+}
+
+/* complétez le sélecteur : */
+#slideshow .slider {
+	/* ... avec la propriété animation */
+	animation: slider 20s infinite;
+}
+
+
+
+
+
+
+/*Bas de la page web*/
+footer{
+color: white;
+background:black;
+position:relative;
+bottom:0;
+width:100%;
+padding-top:50px;
+height:50px;
+}
+
+.f-right{
+    float: right;
+    font-family: 'Harabara Mais Demo', 'MS Gothic';
+}
+
