--- a/site/style.css
+++ b/site/style.css
@@ -1,3 +1,4 @@
+
 /*header*/
 .menu{
     width: 100%;
@@ -8,6 +9,7 @@
 
 .m-left{
     float: left;
+    font-family: 'Metria';
 }
 
 .logo{
@@ -17,10 +19,8 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 50px;
-    font-family: metria;
-    
+     
 }
-
 .m-right{
     float: right;
     font-family: 'Harabara Mais Demo', 'MS Gothic';
@@ -190,25 +190,49 @@ main{
 	/* ... avec la propriété animation */
 	animation: slider 20s infinite;
 }
+/* page contact */
+h3{
+    text-align: center;
+}
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  font-family: 'Tw Cen MT';
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */  
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
 
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #161616;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #ffaa85;
+  padding: 20px;
+}
 
 
 
 
 
 /*Bas de la page web*/
-footer{
-color: white;
-background:black;
-position:relative;
-bottom:0;
-width:100%;
-padding-top:50px;
-height:50px;
-}
-
-.f-right{
-    float: right;
-    font-family: 'Harabara Mais Demo', 'MS Gothic';
-}
 
