--- a/site/style.css
+++ b/site/style.css
@@ -1,4 +1,3 @@
-
 /*header*/
 .menu{
     width: 100%;
@@ -7,9 +6,13 @@
     background-color: black;
 }
 
+.content{
+font-size: 40px;    
+    
+}
+
 .m-left{
     float: left;
-    font-family: 'Metria';
 }
 
 .logo{
@@ -19,8 +22,10 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 50px;
-     
+    font-family: metria;
+    
 }
+
 .m-right{
     float: right;
     font-family: 'Harabara Mais Demo', 'MS Gothic';
@@ -102,9 +107,13 @@ header{
 }
 
 main{
-    max-width: 650px;
-    margin:80px auto;
+    margin:20px ;
+    font-size: 23px;
+    text-align: center;
+    background-color: blue;
 }
+
+
 
 
 
@@ -190,9 +199,34 @@ main{
 	/* ... avec la propriété animation */
 	animation: slider 20s infinite;
 }
+
+
+.slider{
+    
+}
+
+
+
+/*Bas de la page web*/
+footer{
+color: white;
+background:black;
+position:relative;
+bottom:0;
+width:100%;
+padding-top:50px;
+height:50px;
+}
+
+.f-right{
+    float: right;
+    font-family: 'Harabara Mais Demo', 'MS Gothic';
+}
+
 /* page contact */
 h3{
     text-align: center;
+    
 }
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
@@ -209,7 +243,7 @@ input[type=text], select, textarea {
 
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-  background-color: #161616;
+  background-color: #cc0000;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -226,11 +260,14 @@ input[type=submit]:hover {
 /* Add a background color and some padding around the form */
 .container {
   border-radius: 5px;
-  background-color: #ffaa85;
+  background-color: #161616;
   padding: 20px;
+  color: white;
 }
 
-
+#plan {
+    background: cover;
+}
 
 
 
