--- a/site/style.css
+++ b/site/style.css
@@ -299,3 +299,140 @@ height:50px;
     font-family: 'Harabara Mais Demo', 'MS Gothic';
 }
 
+/*page presse*/
+
+.tendances {
+  display: flex; /* type d'affichage*/
+}
+
+.tendances-item {
+  flex-basis: 50%; /* coupe le bloc en 2*/
+
+}
+
+.tendances-inverse {
+  flex-direction: row-reverse; /* direction de la flex */
+}
+
+.tendances-txt {
+  font-size: 1.6rem; /* taille */
+  line-height: 2.5rem; /* espacement entre les lignes*/
+  padding: 7rem; /* marges intérieure*/
+  border: 1px solid black;
+}
+
+.tendances-item .tendances-txt p{
+  text-align: center;
+}
+
+.tendances-txt a {
+  color: #5c738d; /* couleur*/
+}
+
+.tendances-txt a:hover {
+  text-decoration: underline; /* type de décoration pour le texte */
+}
+
+.tendances-txt .title-like {
+  color: #000;
+
+
+}
+
+.tendances-img {
+  position: relative; /* position qui est relative */
+}
+
+.tendances-img span {
+  position: absolute;
+  bottom: 0;/*  espace avec le côté correspondant */
+  left: 0; /* espace avec le côté correspondant */
+  right: 0; /* espace avec le côté correspondant */
+  background: rgba(0, 0, 0, .7); /* couleur + opacité */
+  padding: 3rem 0; /* marges intérieures*/
+  text-align: center; /* alignement horizontale*/
+  color: #fff;
+  font-size: 1.8rem; /* taille de police */
+}
+
+/* page métrage */
+
+.articles {
+  width: 80%; /* largeur */
+  margin: 0 auto; /* écart de remplissage extérieure */
+  padding: 3rem 0; /* écart de remplissage intérieur*/
+}
+
+.articles > div {
+  display: flex; /* type d'affichage */
+  flex-wrap: wrap;
+  margin-bottom: 2rem; /* écart de remplissage extérieure avec le bas */
+  justify-content: space-around; /* aligne l'élément horizontalement et affiche avec un espacement égal à l'entour d'eux. */
+}
+
+.articles > div > div {
+  flex-basis: 31%; /* taille qu'un bloc (ex div) va prendre sur les autres blocs */
+  min-width: 30rem; /* largeur minimal */
+  margin-bottom: 2rem; /* écart de remplissage extérieure avec le bas */
+  background: #eee; /* couleur de fond */
+}
+
+.articles img {
+  width: 100%; /* largeur */
+}
+
+.articles .title-like {
+  font-size: 5rem; /* taille de police */
+  text-align: center; /* alignement horizontal*/
+  color: #000; /* couleur */
+}
+
+.articles a {
+  display: block; /* type d'affichage */
+  color: #000; /* couleur */
+  text-decoration: none; /* type de décoration pour le texte */
+  padding: 1rem; /* écart de remplissage intérieur */
+}
+
+.articles-title {
+  font-size: 1.3rem; /* taille de police */
+  line-height: 1.8rem; /* espacement entre les lignes */
+}
+
+.articles-nom {
+  display: block; /* type d'affichage */
+  text-align: center; /* alingnement horizontale */
+  font-size: 1.9rem; /* taille de police*/
+  font-family: 'Times New Roman', Times, serif; /* type de police */
+  font-style: italic; /* style de police */
+  margin-bottom: 3rem; /* écart de remplissage extérieure avec le bas */
+  position: relative; /*position d'un bloc qui est relatif */
+}
+
+
+
+.articles-img {
+  position: relative; /* position qui est relatif */
+}
+
+.articles-over {
+  position: absolute;  /* position qui est absolue */
+  top: 1rem;   /*  espace avec le côté correspondant */
+  right: 1rem;/* espace avec le côté correspondant */
+  bottom: 1rem; /*espace avec le côté correspondant */
+  left: 1rem; /*espace avec le côté correspondant */
+  background: rgba(0, 0, 0, 0.7); /* couleur avec une opacité */
+  opacity: 0; /* opacité*/
+  transition: opacity 300ms ease-in; /* type de transition */
+}
+
+.articles-over .title-like {
+  position: absolute;
+  width: 100%; /* largeur*/
+  font-size: 3rem; /* taille de police */
+  color: #fff; /* couleur*/
+  left: 0; /* espace avec le côté gauche */
+  overflow: hidden;
+  transform: translateY(-50%); /* glissement sur l'axe Y*/
+  transition: top .1s ease-in; /* type de transition */
+}
