--- a/site/style.css
+++ b/site/style.css
@@ -1,3 +1,4 @@
+/*@media screen and (min-width:450px){
 /*header*/
 @font-face {
 font-family: "WesFY";
@@ -52,6 +53,8 @@ font-size: 40px;
     color : gold;
     font-size : 20px;
 }
+
+
 
 .m-link i{
     margin-right:5px;
@@ -128,18 +131,17 @@ main{
 
 
 /*Diapo*/
-
-#slideshow{
-margin-left: 500px;
-}
 /* gestion des dimensions et débordement du conteneur */
+#slideshow {
+    margin-left: 450px;
+}
 #slideshow .container {
 	position:relative;
 	width: 640px;
 	height: 310px;
 	overflow: hidden;
 }
-
+	
 /* on prévoit un petit espace gris pour la timeline */
 #slideshow .container:after {
 	position:absolute;
@@ -149,7 +151,7 @@ margin-left: 500px;
 	height: 1px;
 	background: #999;
 }
-/*
+/* 
    le conteneur des slides
    en largeur il fait 100% x le nombre de slides
 */
@@ -174,7 +176,7 @@ margin-left: 500px;
 	content: " ";
 	top:0; left:0;
 	width: 100%; height: 100%;
-	box-shadow: 0 0 65px rgba(0,0,0, 0.5) inset;
+	box-shadow: 0 0 65px rgba(0,0,0, 0.5) inset;   
 }
 
 
@@ -211,9 +213,14 @@ margin-left: 500px;
 }
 
 
-.slider{
 
+.map{
+    margin-left : 20px;
+    margin-top: 20px;
 }
+
+
+
 
 
 
@@ -257,7 +264,6 @@ input[type=submit]:hover {
 .container {
   border-radius: 5px;
   background-color: #161616;
-  padding: 20px;
   color: white;
 }
 
@@ -321,7 +327,7 @@ input[type=submit]:hover {
 .articles {
   width: 80%; /* largeur */
   margin: 0 auto; /* écart de remplissage extérieure */
-  padding: 3rem 0; /* écart de remplissage intérieur*/*
+  padding: 3rem 0; /* écart de remplissage intérieur*/
   
 }
 
@@ -351,7 +357,7 @@ input[type=submit]:hover {
   text-align: center; /* alignement horizontal*/
   color: #000; /* couleur */
    font-family: 'WesFY';
-    text-decoration: underline #cc0000;
+   
     
 }
 
@@ -374,20 +380,20 @@ input[type=submit]:hover {
   font-family: 'Times New Roman', Times, serif; /* type de police */
   font-weight: bold;
   font-style: italic; /* style de police */
-  margin-bottom: 3rem; /* écart de remplissage extérieure avec le bas */
+  margin-bottom: 1rem; /* écart de remplissage extérieure avec le bas */
   position: relative; /*position d'un bloc qui est relatif */
   color: #000;
   
 }
 
-
-
-
-    .metrages-img img {
+ .metrages-img img {
   position: relative; /* position qui est relatif */
   border-radius: 20px;
 }
 
+.metrages-img:hover{
+    transform: scale(1.1);
+}
 .metrages-over {
   position: absolute;  /* position qui est absolue */
   top: 1rem;   /*  espace avec le côté correspondant */
@@ -408,4 +414,6 @@ input[type=submit]:hover {
   overflow: hidden;
   transform: translateY(-50%); /* glissement sur l'axe Y*/
   transition: top .1s ease-in; /* type de transition */
+}
+/* Partie responsive */
 }
