--- a/site/planstyle.css
+++ b/site/planstyle.css
@@ -22,7 +22,7 @@ font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 50px;
-    font-family: metria;
+    font-family: 'Lombok';
 }
 
 .m-right{
@@ -83,7 +83,7 @@ header,body,html{
 
 
 header{
-    background: url(images/cinema.jpg)no-repeat;
+    background: url(images/Fond-site.jpg)no-repeat;
     background-size:cover;
     color:white;    
 }
@@ -101,7 +101,7 @@ header{
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-    text-shadow:1px 1px 10px black;
+    
 }
 
 
@@ -113,6 +113,9 @@ header{
 
 .horaire{
     text-align : center;
+    font-family: 'Tw Cen MT';
+    color: #000;
+    
 }
 
 
@@ -131,18 +134,24 @@ td, th /* Mettre une bordure sur les td ET les th */
 }
 
 
-
+.acces {
+    font-size: 1rem;
+    background: #e9e3d5;
+    font-family: 'Tw Cen MT';
+    color: #000;
+}
 
 
 /*CSS du bouton telechargement*/
 
 
 .myButton {
-	background-color:#44c767;
+	background-color:#cc0000;
+	background-color:#cc0000;
 	-moz-border-radius:28px;
 	-webkit-border-radius:28px;
 	border-radius:28px;
-	border:1px solid #18ab29;
+	border:1px solid #000000;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -151,10 +160,11 @@ td, th /* Mettre une bordure sur les td ET les th */
 	font-weight:bold;
 	padding:13px 31px;
 	text-decoration:none;
-	text-shadow:0px 0px 0px #2f6627;
+	text-shadow:0px 0px 0px #9e0101;
+    font-family: 'Tw Cen MT';
 }
 .myButton:hover {
-	background-color:#5cbf2a;
+	background-color:#cc0000;
 }
 .myButton:active {
 	position:relative;
@@ -178,7 +188,7 @@ th, td {
 tr:nth-child(even){background-color: #f2f2f2}
 
 th {
-  background-color: #4CAF50;
+  background-color: #cc0000;
   color: white;
 }
 
