mise en ligne de l'état actuel du site

--- a/borne/style.css
+++ b/borne/style.css
@@ -226,6 +226,13 @@ display: flex;
     z-index: 9;
 }
 
+.texte-samedi a{
+    z-index: 10;
+    text-decoration: none;
+    color: #fff;
+    font-size: 3rem;
+    background: #000;
+}
 .texte-dimanche {
   text-align: center; /* alignement du texte*/
   background: #eee; /* changement couleur d'arriere plan*/
