--- a/borne/style.css
+++ b/borne/style.css
@@ -1,22 +1,21 @@
 
 /* body des pages */
 body {
-background: url('images/Fond-borne.jpg.png');
-    
+background: url('images/Fond-bornev2.png');
+font-family: 'TW Cen MT';
 }
 
 h2 {
     font-family: 'TW Cen MT';
 }
 
-#btn
 
 /* page accueil */
 #titre {
 text-align: center;
 font-size: 7.5rem;
 font-family: 'orkney';
-color: #FFFFFF;
+color: #000000;
 }
 
 #logocliquable{
@@ -25,8 +24,9 @@ height: auto;
 }
 
 #logocliquable img{
-width: 560px;
-height: 350px;
+width: 280px;
+height: 10
+    0px;
 margin-top: 100px;
 }
 
@@ -48,7 +48,7 @@ color:#fff;
 border: 1px solid #161616;
 margin-bottom: 1px;
 list-style-type: none;
-margin-top: 150px;
+margin-top: 75px;
 
 }
 
@@ -60,9 +60,10 @@ font-family:'orkney';
 line-height: 0.5rem;
 text-align: center;
 text-decoration: none;
-padding:15px;
+padding-top:35px;
+padding-bottom:35px;
 position: relative;
-margin-top:1px;
+margin-top:0.5px;
 font-size: 3rem
 
 }
@@ -76,71 +77,44 @@ font-size: 3rem
   text-align: center;
   margin-top: 0px;
 }
-#btn-return{
-    
-}
 
+#planinterne img{
+    width: 850px;
+}
 #title-plan {
-  font-size: 5em;
+  font-size: 2rem;
   color: #000;
   text-align: center;
   font-family: 'TW Cen MT';
 }
 
-#legende {
-    color: #ffffff;
-    font-size: 4.5rem;
-    text-align: center;  
-    font-family: 'TW Cen MT';
+.Returnplan {
+	background-color:#cc0000;
+	background-color:#cc0000;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #000000;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:25px;
+	font-weight:bold;
+	padding:13px 31px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #9e0101;
+    font-family: 'Tw Cen MT';
+    margin-left: 420px;
+    margin-top: 30px;
+   
 }
-
-#legende li{
-      display: inline; 
-      font-size: 5rem;
+.Returnplan:hover {
+	background-color:#cc0000;
 }
-
-#legende #bleu{
-    color: #15c5ef;
-    transform: scale(1.1);
-}
-
-#legende #rouge{
-    color: #f61e00;
-    transform: scale(1.1);
-}
-
-#legende #jaunef{
-    color: #f0c500;
-    transform: scale(1.1);
-}
-
-#legende #rose{
-    color: #df215c;
-    transform: scale(1.1);
-}
-
-#legende #jaune{
-    color: #fcf004;
-    transform: scale(1.1);
-}
-
-#legende #gris{
-    color: #a995eb;
-    transform: scale(1.1);
-}
-
-#legende #orange{
-    color: #f19000;
-    transform: scale(1.1);
-}
-
-#legende #vert{
-    color: #a6e712;
-    transform: scale(1.1);
-}
-
-#legende ul{
-     list-style-type: none;
+.Returnplan:active {
+	position:relative;
+	top:1px;
 }
 
 /* page liste html */
@@ -150,6 +124,19 @@ margin-left: 230px;
     height: 50px;
     width: 210px;
     
+}
+
+input[type=text]{
+   
+   
+   
+}
+
+input[type=submit]{
+    background: #cc0000;
+    color: #fff;
+    border-radius: 2px;
+     border-color: #cc0000;
 }
 button{
     height: 50px;
@@ -169,7 +156,7 @@ display: flex;
 
 #titre-liste{
     color: #000;
-    font-size: 1rem;
+    font-size: 2rem;
     text-align: center;
     font-family: 'TW Cen MT';
     
@@ -179,8 +166,8 @@ display: flex;
 .planning {
     display: flex;
     margin-bottom: 0px;
-    height: 350px;
-    width: 1030px;
+    height: 450px;
+    width: 1000px;
 }
 
 .img-planning{
@@ -191,45 +178,47 @@ display: flex;
   text-align: center; /* alignement du texte*/
   background: #e9e3d5; /* changement couleur d'arriere plan*/
   font-size: 1rem; /* taille de la font*/
-  line-height: 2rem; /* espacement entre les lignes du texte*/
+  line-height: 1rem; /* espacement entre les lignes du texte*/
   padding: 2rem 0; /* marge intérieure de 80 px pour le top et bot & 0 en right et left*/
   flex-basis: 33%;
     transform: scale(1.02);
-    
+    font-family: "TW Cen MT";
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
 }
-
-.img-vendredi{
-    flex-basis: 33%;
-    height: 384px;
-    transform: scale(1.02);
+.texte-vendredi span{
+    visibility: hidden;
 }
 
+.texte-samedi span{
+    visibility: hidden;
+}
+
+.texte-dimanche span{
+    visibility: hidden;
+}
+
+
+.heure:hover +span{
+    visibility: visible;
+}
 
 
 .texte-samedi {
  text-align: center; /* alignement du texte*/
   background: #e9e3d5; /* changement couleur d'arriere plan*/
   font-size: 1rem; /* taille de la font*/
-  line-height: 2rem; /* espacement entre les lignes du texte*/
+  line-height: 0.7rem; /* espacement entre les lignes du texte*/
   padding: 2rem 0; /* marge intérieure de 80 px pour le top et bot & 0 en right et left*/
   flex-basis: 33%;
     transform: scale(1.02);
-    
+    font-family: "TW Cen MT";
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
 }
 
 
-.img-samedi{
-    flex-basis: 33%;
-    height: 384px;
-    transform: scale(1.0);
-    z-index: 9;
-}
-
-a{
+#btns a{
     z-index: 10;
     text-decoration: none;
     color: #fff;
@@ -243,25 +232,16 @@ a{
   text-align: center; /* alignement du texte*/
   background: #e9e3d5; /* changement couleur d'arriere plan*/
   font-size: 1rem; /* taille de la font*/
-  line-height: 2rem; /* espacement entre les lignes du texte*/
+  line-height: 0.8rem; /* espacement entre les lignes du texte*/
   padding: 2rem 0; /* marge intérieure de 80 px pour le top et bot & 0 en right et left*/
   flex-basis: 34%;
     transform: scale(1.02);
-    
+    font-family: "TW Cen MT";
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
     
 }
 
-
-.img-dimanche{
-    flex-basis: 33%;
-    height: 384px;
-    width:341px;
-    z-index: 8;
-    transform: scale(1.02);
-    margin-left: 20px;
-}
 
 
 .texte-vendredi .date{
@@ -279,10 +259,12 @@ a{
 #btns{
     text-align: center;
     margin: 20px 10px;
+    
 }
 
 #btns a{
      font-size: 25px;
+    padding: 5px 10px;
     
 }
 /* bouton retour */
@@ -410,4 +392,25 @@ a{
   transition: top .1s ease-in; /* type de transition */
 }
 
+
+/* liste php */
+
+.alignement {
+    margin-left: 410px;}
+
+.content h1{
+    text-align: center;
+    font-family: "TW Cen MT";
+    font-size: 4rem;
+}
+
+.relink {
+    margin-left: 250px;
+    text-decoration: none;
+    font-family: "TW Cen MT";
+    background: #cc0000;
+    color: #fff;
+    border-radius: 2px;
+    font-size: 2rem;
+}
 
